--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: fernandopasik/jekyll-theme-material-docs
+remote_theme: pages-themes/cayman@v0.2.0
 # pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme
